fixed overflow and dropdowns in constructor sidebar

--- a/src/assets/admin/components/document-tabs/editor.scss
+++ b/src/assets/admin/components/document-tabs/editor.scss
@@ -1,9 +1,16 @@
 @import "../../variables";
 
-.post-type-lazyblocks .lazyblocks-component-document-tabs .components-panel__header.edit-post-sidebar-header {
-    display: flex;
-    margin: -16px;
-    margin-bottom: -1px;
+.post-type-lazyblocks {
+    // fixed overflow and dropdowns in editor sidebar.
+    .edit-post-sidebar > .components-panel {
+        min-height: 100%;
+    }
+
+    .lazyblocks-component-document-tabs .components-panel__header.edit-post-sidebar-header {
+        display: flex;
+        margin: -16px;
+        margin-bottom: -1px;
+    }
 }
 
 .lazyblocks-component-document-tabs .lazyblocks-component-document-tabs-content {
